--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,37 +1,37 @@
-name: build
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
 jobs:
   build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ '8', '11' ]
-
     name: Java ${{ matrix.java }} build
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v4
+    - continue-on-error: true
+      uses: actions/checkout@v4
+    - continue-on-error: true
+      uses: actions/setup-java@v4
       with:
+        distribution: temurin
         java-version: ${{ matrix.java }}
-        distribution: 'temurin'
-    - name: Build Java ${{ matrix.java }}
-      uses: gradle/actions/setup-gradle@v3
+    - continue-on-error: true
       if: matrix.java != 11
+      name: Build Java ${{ matrix.java }}
+      uses: gradle/actions/setup-gradle@v3
       with:
         arguments: test
-    - name: Build Java 11
-      uses: gradle/actions/setup-gradle@v3
-      if: matrix.java == 11
-      with:
-        arguments: jacocoTestReport coveralls
+    - continue-on-error: true
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    
+      if: matrix.java == 11
+      name: Build Java 11
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        arguments: jacocoTestReport coveralls
+    strategy:
+      matrix:
+        java:
+        - '8'
+        - '11'
+name: build
+on:
+  repository_dispatch:
+    types: trigger-ga___gradle.yml
